// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management index page designs does not render toolbar when there is no permission 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="gl-mt-6"
  >
    <ol
      class="list-unstyled row"
    >
      <li
        class="gl-flex-direction-column col-md-6 col-lg-3 gl-mb-3"
        data-testid="design-dropzone-wrapper"
      >
        <design-dropzone-stub
          class="design-list-item design-list-item-new"
          data-qa-selector="design_dropzone_content"
          hasdesigns="true"
        />
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3 gl-bg-transparent gl-shadow-none js-design-tile"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            class="gl-bg-white"
            event="NONE"
            filename="design-1-name"
            id="design-1"
            image="design-1-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <!---->
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3 gl-bg-transparent gl-shadow-none js-design-tile"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            class="gl-bg-white"
            event="NONE"
            filename="design-2-name"
            id="design-2"
            image="design-2-image"
            notescount="1"
          />
        </design-dropzone-stub>
         
        <!---->
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3 gl-bg-transparent gl-shadow-none js-design-tile"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            class="gl-bg-white"
            event="NONE"
            filename="design-3-name"
            id="design-3"
            image="design-3-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <!---->
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders designs list and header with upload button 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <header
    class="row-content-block gl-border-t-0 gl-p-3 gl-display-flex"
  >
    <div
      class="gl-display-flex gl-justify-content-space-between gl-align-items-center gl-w-full"
    >
      <div>
        <span
          class="gl-font-weight-bold gl-mr-3"
        >
          Designs
        </span>
         
        <design-version-dropdown-stub />
      </div>
       
      <div
        class="qa-selector-toolbar gl-display-flex gl-align-items-center"
      >
        <gl-button-stub
          buttontextclasses=""
          category="primary"
          class="gl-mr-4 js-select-all"
          icon=""
          size="small"
          variant="link"
        >
          Select all
        
        </gl-button-stub>
         
        <div>
          <delete-button-stub
            buttoncategory="secondary"
            buttonclass="gl-mr-3"
            buttonsize="small"
            buttonvariant="warning"
            data-qa-selector="archive_button"
          >
            
            Archive selected
          
          </delete-button-stub>
        </div>
         
        <upload-button-stub />
      </div>
    </div>
  </header>
   
  <div
    class="gl-mt-6"
  >
    <ol
      class="list-unstyled row"
    >
      <li
        class="gl-flex-direction-column col-md-6 col-lg-3 gl-mb-3"
        data-testid="design-dropzone-wrapper"
      >
        <design-dropzone-stub
          class="design-list-item design-list-item-new"
          data-qa-selector="design_dropzone_content"
          hasdesigns="true"
        />
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3 gl-bg-transparent gl-shadow-none js-design-tile"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            class="gl-bg-white"
            event="NONE"
            filename="design-1-name"
            id="design-1"
            image="design-1-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <input
          class="design-checkbox"
          data-qa-design="design-1-name"
          data-qa-selector="design_checkbox"
          type="checkbox"
        />
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3 gl-bg-transparent gl-shadow-none js-design-tile"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            class="gl-bg-white"
            event="NONE"
            filename="design-2-name"
            id="design-2"
            image="design-2-image"
            notescount="1"
          />
        </design-dropzone-stub>
         
        <input
          class="design-checkbox"
          data-qa-design="design-2-name"
          data-qa-selector="design_checkbox"
          type="checkbox"
        />
      </li>
      <li
        class="col-md-6 col-lg-3 gl-mb-3 gl-bg-transparent gl-shadow-none js-design-tile"
      >
        <design-dropzone-stub
          hasdesigns="true"
        >
          <design-stub
            class="gl-bg-white"
            event="NONE"
            filename="design-3-name"
            id="design-3"
            image="design-3-image"
            notescount="0"
          />
        </design-dropzone-stub>
         
        <input
          class="design-checkbox"
          data-qa-design="design-3-name"
          data-qa-selector="design_checkbox"
          type="checkbox"
        />
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders error 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="gl-mt-6"
  >
    <gl-alert-stub
      dismisslabel="Dismiss"
      primarybuttonlink=""
      primarybuttontext=""
      secondarybuttonlink=""
      secondarybuttontext=""
      title=""
      variant="danger"
    >
      
      An error occurred while loading designs. Please try again.
    
    </gl-alert-stub>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page designs renders loading icon 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="gl-mt-6"
  >
    <gl-loading-icon-stub
      color="dark"
      label="Loading"
      size="md"
    />
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;

exports[`Design management index page when has no designs renders design dropzone 1`] = `
<div
  class="gl-mt-5"
  data-testid="designs-root"
>
  <!---->
   
  <div
    class="gl-mt-6"
  >
    <ol
      class="list-unstyled row"
    >
      <li
        class="col-12"
        data-testid="design-dropzone-wrapper"
      >
        <design-dropzone-stub
          class=""
          data-qa-selector="design_dropzone_content"
        />
      </li>
    </ol>
  </div>
   
  <router-view-stub
    name="default"
  />
</div>
`;
